# fastapi-ormar

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/books_api/: __init__.py  models.py  routers.py  schemas.py
app/configs/: database.py  settings.py
migrations/: env.py
